--- a/src/locales/en/login.json
+++ b/src/locales/en/login.json
@@ -1,3 +1,11 @@
 {
-  "title": "Login"
+  "title": "Welcome",
+  "user": "User",
+  "password": "Password",
+  "button": "Login",
+  "errors": {
+    "password": "The password is required.",
+    "user": "The user is required.",
+    "email": "Enter a valid email."
+  }
 }
